# SAENA-RAPID-7

./: .coverage  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .importlinter  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  CODEOWNERS  CODEOWNERS.example  CONTRIBUTING.md  README.md  SECURITY.md  coverage.xml  justfile  pyproject.toml
.claude/: README.md  (+2 more)
.claude-plugin/: marketplace.json
services/acquisition/chatgpt-observer-service/: README.md  pyproject.toml
services/acquisition/chatgpt-observer-service/src/saena_chatgpt_observer/: __init__.py  artifact_gateway.py  budget.py  capture.py  errors.py  measurement_scheduling.py  observation.py  platform_observation_record.py  playwright_driver.py  pool.py  pool_capture.py  source.py  store.py
services/acquisition/repository-intake-service/: README.md  pyproject.toml
services/acquisition/repository-intake-service/src/saena_repository_intake/: __init__.py  app.py  core.py  errors.py  memory.py  problem.py  protocols.py
services/acquisition/site-discovery-service/: README.md  pyproject.toml
services/acquisition/site-discovery-service/src/saena_site_discovery/: __init__.py  budget.py  crawler.py  errors.py  inventory.py  records.py  store.py
services/experimentation/experiment-attribution-service/: README.md  pyproject.toml
services/experimentation/experiment-attribution-service/src/saena_experiment_attribution/: __init__.py
services/experimentation/experiment-attribution-service/src/saena_experiment_attribution/boundary/: __init__.py  confirmed_consumer.py  errors.py  observation_adapter.py  outcome_publisher.py  ports.py
services/experimentation/experiment-attribution-service/src/saena_experiment_attribution/persistence/: __init__.py  adapter.py  fingerprint.py  mapping.py  tables.py
services/experimentation/experiment-attribution-service/src/saena_experiment_attribution/pipeline/: __init__.py  errors.py  inputs.py  orchestrator.py  outcome.py
services/experimentation/experiment-attribution-service/src/saena_experiment_attribution/workflow/: __init__.py  activities.py  timeouts.py  workflow.py  workflow_logic.py
services/experimentation/strategy-skill-bank-service/: README.md  pyproject.toml
services/experimentation/strategy-skill-bank-service/src/saena_strategy_skill_bank/: __init__.py  intake.py
services/foundation/policy-gate-service/: README.md  pyproject.toml
services/foundation/policy-gate-service/src/saena_policy_gate/: __init__.py  app.py  engine.py  errors.py  problem.py  rules.py  schemas.py  service.py  tenant_middleware.py
services/foundation/tenant-control-service/: README.md  pyproject.toml
services/foundation/tenant-control-service/src/saena_tenant_control/: __init__.py  app.py  errors.py  middleware.py  schemas.py  service.py
services/intelligence/citation-intelligence-service/: README.md  pyproject.toml
services/intelligence/citation-intelligence-service/src/saena_citation_intelligence/: __init__.py  errors.py  normalization.py  ownership.py  records.py  service.py
services/intelligence/claim-evidence-service/: README.md  pyproject.toml
services/intelligence/claim-evidence-service/src/saena_claim_evidence/: __init__.py  errors.py  evaluation.py  events.py  hashing.py  ledger.py  qeeg_projection.py  store.py
services/intelligence/demand-graph-service/: README.md  pyproject.toml
services/intelligence/demand-graph-service/src/saena_demand_graph/: __init__.py  builder.py  errors.py  events.py  records.py  store.py
services/intelligence/entity-resolution-service/: README.md  pyproject.toml
services/intelligence/entity-resolution-service/src/saena_entity_resolution/: __init__.py  canonicalize.py  errors.py  events.py  graph.py  store.py
services/platform/agent-orchestrator-service/: README.md  pyproject.toml
services/platform/agent-orchestrator-service/src/saena_orchestrator/: __init__.py  activities.py  errors.py  signal_client.py  timeouts.py  workflow.py  workflow_logic.py
services/platform/agent-runner-service/: README.md  pyproject.toml
services/platform/agent-runner-service/src/saena_agent_runner/: __init__.py  approval.py  artifact.py  audit.py  clock.py  commands.py  contract.py  errors.py  runner.py  scope.py  skill_bundle.py  worktree.py
services/platform/artifact-registry-service/: README.md  pyproject.toml
services/platform/artifact-registry-service/src/saena_artifact_registry/: __init__.py  app.py  blobstore.py  errors.py  problem.py  uri_validation.py
services/platform/engine-adapter-gateway/: README.md  pyproject.toml
services/platform/engine-adapter-gateway/src/saena_engine_gateway/: __init__.py  app.py  errors.py  flags.py  problem_detail.py  registry.py  tenant_middleware.py
services/platform/forge-console-api/: README.md  pyproject.toml
services/platform/forge-console-api/src/saena_forge_console/: __init__.py  app.py  authn.py  errors.py  lineage.py  rbac.py  routes.py  run_store.py  schemas.py  tenant_reconcile.py  trace.py
services/platform/quality-eval-service/: README.md  pyproject.toml
services/platform/quality-eval-service/src/saena_quality_eval/: __init__.py  audit.py  canonical.py  contract.py  engine.py  errors.py  events.py  gate_ids.py  gate_result.py  gates.py  inputs.py  manifest.py  protocols.py  redaction.py  verification.py
tools/forgectl/: README.md  pyproject.toml
tools/forgectl/src/saena_forgectl/: __init__.py  __main__.py  cli.py  errors.py  models.py  preflight.py  values.py
tools/forgectl/src/saena_forgectl/checks/: __init__.py  _util.py  engine_flags.py  external_secret_refs.py  image_digest_signature.py  migrations_reversible.py  network_policy.py  service_account_permissions.py
tools/saena-pilot/: pyproject.toml
tools/saena-pilot/src/saena_pilot/: __init__.py  __main__.py  _git.py  boundary.py  bundle.py  cli.py  docker_preflight.py  domain.py  errors.py  evidence.py  intake.py  launcher.py  models.py  report.py  runstore.py  secretguard.py  worktree.py
tools/saena-pilot/src/saena_pilot/discovery/: __init__.py  _seam.py  _signals.py  adapters.py
(+1193 files in other folders)
