[project]
name = "saena-monorepo"
version = "0.0.0"
description = "SAENA RAPID-7 workspace root (virtual — not a package)"
requires-python = ">=3.12,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
# Members are listed explicitly: several packages/* dirs (contracts, schemas,
# events mirrors) are schema/doc trees without pyproject.toml by design.
# Add each new member here in the patch unit that creates it.
members = [
    "packages/shared",
    "packages/testing",
    "packages/schemas",
    "packages/domain",
    "packages/observability",
    "services/foundation/tenant-control-service",
    "services/foundation/policy-gate-service",
    "services/foundation/audit-ledger-service",
    "services/foundation/plan-contract-service",
    "services/platform/forge-console-api",
    "services/platform/agent-orchestrator-service",
    "services/platform/artifact-registry-service",
    "services/platform/engine-adapter-gateway",
]

[dependency-groups]
dev = [
    "rust-just>=1.36,<3",
    "ruff>=0.14,<0.15",
    "mypy>=1.14,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6,<7",
    "diff-cover>=9,<10",
    "import-linter>=2.1,<3",
    "check-jsonschema>=0.30,<1",
    "saena-shared",
    "saena-testing",
    "saena-schemas",
    "saena-domain",
    "saena-observability",
    "saena-tenant-control",
    "saena-policy-gate",
    "saena-audit-ledger",
    "saena-plan-contract",
    "saena-forge-console",
    "saena-orchestrator",
    "saena-artifact-registry",
    "saena-engine-gateway",
    "datamodel-code-generator>=0.26,<1",
    "openapi-spec-validator>=0.7,<1",
    "pyyaml>=6,<7",
    "types-jsonschema>=4,<5",
    "types-pyyaml>=6,<7",
    "testcontainers>=4.9,<5",
]

[tool.uv.sources]
saena-shared = { workspace = true }
saena-testing = { workspace = true }
saena-schemas = { workspace = true }
saena-domain = { workspace = true }
saena-observability = { workspace = true }
saena-tenant-control = { workspace = true }
saena-policy-gate = { workspace = true }
saena-audit-ledger = { workspace = true }
saena-plan-contract = { workspace = true }
saena-forge-console = { workspace = true }
saena-orchestrator = { workspace = true }
saena-artifact-registry = { workspace = true }
saena-engine-gateway = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Generated code carries verbatim JSON Schema description/$comment text as
# Field(description=...) strings (packages/contracts is the SSOT for that
# prose, ADR-0011) — reflowing it would diverge from source. Codegen output
# only, never hand-edited (packages/schemas/README.md).
"packages/schemas/saena_schemas/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["packages", "services"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["packages", "services", "tests/contract/harness"]
# Exclusions must be explicit per ADR-0017 — no implicit patterns.
# packages/schemas/saena_schemas/* is 100% codegen output (ADR-0011 SSOT
# split; packages/schemas/README.md) — coverage over generated pydantic
# models measures datamodel-code-generator's output shape, not this repo's
# own logic, so it is explicitly omitted here (critic S2, approved plan §2
# codegen-output-coverage-exclusion obligation).
omit = ["packages/schemas/saena_schemas/*"]
