[project]
name = "saena-monorepo"
version = "0.0.0"
description = "SAENA RAPID-7 workspace root (virtual — not a package)"
requires-python = ">=3.12,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
# Members are listed explicitly: several packages/* dirs (contracts, schemas,
# events mirrors) are schema/doc trees without pyproject.toml by design.
# Add each new member here in the patch unit that creates it.
members = [
    "packages/shared",
    "packages/testing",
    "packages/schemas",
    "packages/domain",
    "packages/observability",
    "packages/hooks-runtime",
    "services/acquisition/repository-intake-service",
    "services/platform/quality-eval-service",
    "services/foundation/tenant-control-service",
    "services/foundation/policy-gate-service",
    "services/foundation/audit-ledger-service",
    "services/foundation/plan-contract-service",
    "services/platform/forge-console-api",
    "services/platform/agent-orchestrator-service",
    "services/platform/artifact-registry-service",
    "services/platform/engine-adapter-gateway",
    "tools/forgectl",
]

[dependency-groups]
dev = [
    "rust-just>=1.36,<3",
    "ruff>=0.14,<0.15",
    "mypy>=1.14,<2",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6,<7",
    "diff-cover>=9,<10",
    "import-linter>=2.1,<3",
    "check-jsonschema>=0.30,<1",
    "saena-shared",
    "saena-testing",
    "saena-schemas",
    "saena-domain",
    "saena-observability",
    "saena-tenant-control",
    "saena-policy-gate",
    "saena-audit-ledger",
    "saena-plan-contract",
    "saena-forge-console",
    "saena-orchestrator",
    "saena-artifact-registry",
    "saena-engine-gateway",
    "saena-forgectl",
    "saena-hooks-runtime",
    "saena-repository-intake",
    "saena-quality-eval",
    "datamodel-code-generator>=0.26,<1",
    "openapi-spec-validator>=0.7,<1",
    "pyyaml>=6,<7",
    "types-jsonschema>=4,<5",
    "types-pyyaml>=6,<7",
    "testcontainers>=4.9,<5",
]

[tool.uv.sources]
saena-shared = { workspace = true }
saena-testing = { workspace = true }
saena-schemas = { workspace = true }
saena-domain = { workspace = true }
saena-observability = { workspace = true }
saena-tenant-control = { workspace = true }
saena-policy-gate = { workspace = true }
saena-audit-ledger = { workspace = true }
saena-plan-contract = { workspace = true }
saena-forge-console = { workspace = true }
saena-orchestrator = { workspace = true }
saena-artifact-registry = { workspace = true }
saena-engine-gateway = { workspace = true }
saena-forgectl = { workspace = true }
saena-hooks-runtime = { workspace = true }
saena-repository-intake = { workspace = true }
saena-quality-eval = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Generated code carries verbatim JSON Schema description/$comment text as
# Field(description=...) strings (packages/contracts is the SSOT for that
# prose, ADR-0011) — reflowing it would diverge from source. Codegen output
# only, never hand-edited (packages/schemas/README.md).
"packages/schemas/saena_schemas/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["packages", "services", "tools/forgectl/src"]

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "-ra"
# w2-20 (Wave 2 exit): `integration` is the two-lane split marker — every
# test under tests/integration/** is auto-marked by that tree's own root
# `tests/integration/conftest.py` (pytest_collection_modifyitems). Registered
# here (root, canonical) so `-m integration` / `-m "not integration"`
# selection works without a `PytestUnknownMarkWarning`; several subdirectory
# conftests also register the same marker string locally (harmless
# redundancy — see tests/integration/conftest.py docstring for why).
markers = [
    "integration: exercises a real external test-server/container process under tests/integration/** — excluded from the blocking `just verify` unit lane, run separately via `just test-integration` (w2-20).",
]

[tool.coverage.run]
source = ["packages", "services", "tests/contract/harness", "tools/forgectl/src"]
# Exclusions must be explicit per ADR-0017 — no implicit patterns.
# packages/schemas/saena_schemas/* is 100% codegen output (ADR-0011 SSOT
# split; packages/schemas/README.md) — coverage over generated pydantic
# models measures datamodel-code-generator's output shape, not this repo's
# own logic, so it is explicitly omitted here (critic S2, approved plan §2
# codegen-output-coverage-exclusion obligation).
#
# packages/domain/src/saena_domain/persistence/postgres/adapters.py (w2-20,
# Wave 2 exit — documented, non-silent ratchet adjustment per task
# instruction "either add a unit test or adjust the coverage source/omit
# honestly with a documented reason"): this file is 1,019 lines of
# SQLAlchemy async-engine SQL adapter code (w2-13) that is MEANINGFULLY
# exercisable only against a real PostgreSQL connection — a mock/stub
# engine would test the mock, not the actual SQL this module emits. It
# carries NO unit-lane coverage of its own (21% — the 21% present is
# incidental import/constructor coverage from unrelated unit tests, not
# behavior coverage) but is 100% covered by the real
# `tests/integration/persistence_postgres/**` suite (postgres:16-alpine
# testcontainer, w2-13) — confirmed by a direct measurement run,
# w2-20 verification. Per the w2-20 two-lane split (`just test` =
# `-m "not integration"`, blocking; `just test-integration` = `-m
# integration`, separate lane — see justfile), this file's ONLY
# behavioral coverage now lives in the integration lane, which is NOT
# omitted from ITS OWN, separate measurement (`just test-integration`
# still runs pytest-cov against the same [tool.coverage.run] source/omit
# config and its terminal report shows this file at 100% — the omit below
# only affects what counts toward the BLOCKING unit-lane ratchet
# computed by `coverage-gates`/`coverage-ratchet.sh`, not whether the file
# is tested at all). Omitting it here (rather than silently accepting a
# 99% -> 94% ratchet drop, which the task instruction explicitly forbids)
# keeps the blocking gate's baseline meaningful for the code that lane
# actually exercises. If a future patch unit adds meaningful unit-level
# coverage for this file (e.g. a fake/in-memory SQLAlchemy dialect), this
# omit entry should be removed and the ratchet re-evaluated.
omit = [
    "packages/schemas/saena_schemas/*",
    "packages/domain/src/saena_domain/persistence/postgres/adapters.py",
]
