[project]
name = "saena-forgectl"
version = "0.1.0"
description = "SAENA FORGE k3s package operator CLI — forgectl preflight (w2-19, W2C)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml>=6,<7",
    "saena-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_forgectl"]

# NOTE: this package is deliberately NOT a `uv` workspace member — adding
# it as one requires editing root pyproject.toml's [tool.uv.workspace]
# `members` list and [tool.uv.sources], both outside this patch unit's
# exclusive write paths (tools/forgectl/**, tests/unit/forgectl/** only;
# see tools/forgectl/README.md "Packaging note"). `pyyaml` and
# `saena-schemas` are both already present in the shared venv (root
# dev-group dependency and an existing workspace member respectively), so
# `tests/unit/forgectl` imports `saena_forgectl` directly via a `sys.path`
# insert (see tests/unit/forgectl/conftest.py) against that already-synced
# environment — no new dependency was introduced by this patch unit.
