[project]
name = "saena-pilot"
version = "0.1.0"
description = "SAENA external-customer-project pilot launcher CLI (w6-11, Wave 6 §3.3)"
requires-python = ">=3.12,<3.13"
# Deliberately stdlib-only (w6-11 contract): the pilot must be launchable on a
# fresh checkout with no third-party import surface of its own. Anything that
# needs a dependency (framework discovery adapters, Docker preflight) lands in
# later units behind the discovery seam.
dependencies = []

[project.scripts]
saena-pilot = "saena_pilot.cli:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_pilot"]
