[project]
name = "saena-chatgpt-observer"
version = "0.1.0"
description = "SAENA chatgpt-observer-service — read-only ChatGPT Search PlatformObservation capture (W3, JobKind.CHATGPT_OBSERVER)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "saena-domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_chatgpt_observer"]

[tool.uv.sources]
saena-domain = { workspace = true }

# NOTE (w3-05): NOT YET a root-workspace member — see
# services/acquisition/site-discovery-service/pyproject.toml's identical
# note (same repo-wide convention: registering a new workspace member is
# the Integrator's job at merge time, precedent
# packages/hooks-runtime/pyproject.toml added by unit/w3-06-hooks-runtime).
# Tests import this package by inserting `src/` onto `sys.path` directly
# (`tests/unit/svc_observer_discovery/conftest.py`), not via `uv sync`.
