[project]
name = "saena-site-discovery"
version = "0.1.0"
description = "SAENA site-discovery-service — read-only site/repo inventory crawl (W3, JobKind.SITE_DISCOVERY)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "saena-domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_site_discovery"]

[tool.uv.sources]
saena-domain = { workspace = true }

# NOTE (w3-05): this package is NOT YET a member of the root workspace
# (root pyproject.toml `[tool.uv.workspace].members` / dev dependency-group)
# — per this repo's established Wave-3 parallel-unit convention (see
# packages/hooks-runtime/pyproject.toml, added by unit/w3-06-hooks-runtime,
# same not-yet-registered state at the time this unit was authored), each
# new-package patch unit's own exclusive paths never include root
# pyproject.toml: registering a new workspace member is the Integrator's
# job at merge time (CLAUDE.md "독점 수정 경로" / "단일 owner" — root
# pyproject.toml is shared infrastructure every parallel Wave-3 unit would
# otherwise collide on). Until that registration happens, this package is
# NOT `uv sync`-installed/importable as a real distribution — this unit's
# own tests (`tests/unit/svc_observer_discovery/conftest.py`) import it by
# inserting `src/` directly onto `sys.path` instead, exactly like that same
# conftest already does for its own test-helper module.
