[project]
name = "saena-citation-intelligence"
version = "0.1.0"
description = "SAENA citation-intelligence-service — citation URL normalization + rule-based/calibrated-prior source-ownership classification (Wave 4, w4-05, JobKind-less pure domain module)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "saena-domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_citation_intelligence"]

[tool.uv.sources]
saena-domain = { workspace = true }

# NOTE (w4-05): this package is NOT YET a member of the root workspace
# (root pyproject.toml `[tool.uv.workspace].members` / dev dependency-group
# / `[tool.uv.sources]` / `[tool.mypy] files` / `[tool.coverage.run] source`
# / `.importlinter`) — per this repo's established Wave-3/Wave-4
# parallel-unit convention (see `services/acquisition/site-discovery-service/
# pyproject.toml`'s identical NOTE, and `packages/vector-store/pyproject.toml`'s
# "Packaging note", both precedents this unit follows verbatim), each new-
# package patch unit's own exclusive paths never include root pyproject.toml:
# registering a new workspace member is the Integrator's job at merge time
# (CLAUDE.md "독점 수정 경로" / "단일 owner" — root pyproject.toml is shared
# infrastructure every parallel Wave-4 unit would otherwise collide on).
# Until that registration happens, this package is NOT `uv sync`-installed/
# importable as a real distribution — this unit's own tests
# (`tests/unit/svc_citation_intelligence/conftest.py`) import it by inserting
# `src/` directly onto `sys.path` instead, exactly like that same conftest
# pattern already does for `saena_site_discovery`/`saena_vector_store`.
