[project]
name = "saena-agent-runner"
version = "0.1.0"
description = "SAENA agent-runner-service — approved-patch-unit execution in isolated worktrees (W3, JobKind.AGENT_RUNNER)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "saena-domain",
    "saena-schemas",
    "saena-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_agent_runner"]

[tool.uv.sources]
saena-domain = { workspace = true }
saena-schemas = { workspace = true }
saena-shared = { workspace = true }
