[project]
name = "saena-artifact-registry"
version = "0.1.0"
description = "SAENA artifact-registry-service — blob single gateway, immutable manifests (W2B)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "httpx>=0.28,<1",
    "saena-domain",
    "saena-observability",
    "saena-schemas",
    "saena-shared",
    "minio>=7.2,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saena_artifact_registry"]

[tool.uv.sources]
saena-domain = { workspace = true }
saena-observability = { workspace = true }
saena-schemas = { workspace = true }
saena-shared = { workspace = true }
